syntax = "proto3";

option java_multiple_files = true;
option java_package = "contest.join.proto";

package contestjoin;

// gRPC definition for ContestJoinService



service ContestJoinService {
    rpc JoinContest(ContestJoinRequests) returns (Joins) {}
    rpc GetContestJoin (GetJoinRequest) returns (JoinState) {}

    rpc GetJoinByContest(JoinByContestRequest) returns (ContestUserResponse) {}
    rpc GetJoinByUser(JoinByUserRequest) returns (ContestUserResponse) {}
    rpc GetAllJoin(EmptyParameter) returns (ContestUserResponse) {}

}

message ContestJoinRequests {
    repeated ContestJoinRequest contestJoinRequest = 1;
}

message ContestJoinRequest {
    string contestId = 1;
    string userId = 2;
    string joinMetaData = 3;
}

message GetJoinRequest {
    string contestId = 1;
}

message Joins {
    repeated JoinRecord joinRecords = 1;
}


message JoinRecord {
    string contestId = 1;
    string userId = 2;
    string status = 3;
}
message JoinState {
    string contestId = 1;
    int32 maxSeat = 2;
    int32 occupiedSeatCount = 3;
}

message JoinByContestRequest {
    string contestId = 1;
}

message JoinByUserRequest {
    string userId = 1;
}

message ContestUserResponse {
    repeated ContestUserInfo contestUserInfo = 1;
}

message ContestUserInfo {
    string contestId = 1;
    string userId = 2;
    string joinMetaData = 3;
    int32 positionId = 4;
}

message EmptyParameter {}
